--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://ovogmap.github.io/movieTM"
+  "homepage": "https://ovogmap.github.io/movieTM"
 }
